--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,19 @@
 <body>
   <nav class="navbar">
     <div class="container">
+      <div class="col-sm-offset-2 col-sm-10">
+         </div>
+    </div>
       <div class="navbar-header">
+        <div class="col-md-offset-2 col-md-10">
         <a class="navbar-brand" href="#">Message Board</a>
+        </div>
       </div>
     </div>
   </nav>
   <div class="container">
+    <div class="col-md-10">
+      </div>
     <%= yield %>
   </div>
 </body>
