--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,8 +21,12 @@
     </div>
   </nav>
   <div class="container">
-    <div class="col-md-10">
+    <% if notice %>
+      <div class="alert alert-info">
+        <%= notice %>
       </div>
+    <% end %>
+    
     <%= yield %>
   </div>
 </body>
