--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@message) do |f| %>
+<%= form_for(@message, html:{class:'form-horizontal'}) do |f| %>
   <% if @message.errors.present? %>
     <div class="alert alert-danger">
       <%= alert %>
@@ -12,13 +12,29 @@
     </div>
   <% end %>
 
-  名前:
-  <%= f.text_field :name %>
- 年齢:
-  <%= f.text_field :age %>
-  内容:
-  <%= f.text_field :body %>
+  <div class="form-group">
+    <div class="col-md-2">
+      <%= f.label :name, "名前:", class:"control-label" %>
+    </div>
+    <div class="col-md-10">
+      <%= f.text_field :name, class:"form-control" %>
+    </div>
+  
+  <div class="col-md-2">
+      <%= f.label :age, "年齢:", class:"control-label" %>
+    </div>
+    <div class="col-md-10">
+      <%= f.text_field :age, class:"form-control" %>
+    </div>
+  
+ <div class="col-md-2">
+      <%= f.label :body, "内容:", class:"control-label" %>
+    </div>
+    <div class="col-md-10">
+      <%= f.text_field :body, class:"form-control" %>
+    </div>
+ 
   
   <%= f.submit class: "btn btn-sm btn-primary" %>
-  
+  </div>
 <% end %>
